# molmo-agent

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/molmoagent/: MainActivity.kt  MolmoAgentApp.kt
app/src/main/java/com/example/molmoagent/accessibility/: AgentAccessibilityService.kt  GestureDispatcher.kt  GlobalActions.kt  TapIndicator.kt
app/src/main/java/com/example/molmoagent/agent/: ActionExecutor.kt  ActionParser.kt  ActionSpace.kt  AgentLoop.kt  AgentState.kt  TaskHistory.kt
app/src/main/java/com/example/molmoagent/data/: AppDatabase.kt  StepEntity.kt  TaskEntity.kt  TaskRepository.kt
app/src/main/java/com/example/molmoagent/di/: AppModule.kt
app/src/main/java/com/example/molmoagent/inference/: HuggingFaceClient.kt  ImageProcessor.kt  InferenceClient.kt  InferenceClientManager.kt  MolmoPromptBuilder.kt  ResponseParser.kt
app/src/main/java/com/example/molmoagent/inference/local/: LlamaCppBridge.kt  LocalInferenceClient.kt  ModelDownloadManager.kt  SmolVLMPromptBuilder.kt
app/src/main/java/com/example/molmoagent/screen/: ScreenshotManager.kt
app/src/main/java/com/example/molmoagent/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/example/molmoagent/ui/overlay/: AgentLoopHolder.kt  FloatingFab.kt  FloatingPanel.kt  InferenceGlowOverlay.kt  OverlayLifecycleOwner.kt  OverlayService.kt  OverlayVisibilityController.kt
app/src/main/java/com/example/molmoagent/ui/settings/: SettingsScreen.kt
app/src/main/java/com/example/molmoagent/ui/setup/: SetupScreen.kt
app/src/main/java/com/example/molmoagent/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
